@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2009-01-22  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/dib.c (ReadDIBImage): Fix assertion thrown for DIB files
+        with negative image height values.
+
+</UL>
+<p>
 2009-01-21  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
